src/components/Layout/Header/DarkModeToggle/style.module.scss
.outerSlider {
  position: relative;
  overflow: hidden;
  height: 2rem;
  width: 3rem;
  border-radius: 100vmax;
  padding: 0;

  background-color: $color-background;

  .innerSlider {
    position: absolute;

    width: 1.25rem;
    height: 1.25rem;
    top: calc(0.75rem / 2);
    border-radius: 100vmax;

    transition: transform 0.25s ease-out;

    .colorFill {
      position: absolute;
      border-radius: 100vmax;
      width: 100%;
      height: 100%;
    }

    .beam {
      position: absolute;
      width: 1.75rem;
      height: 1.75rem;
      left: -0.25rem;
      top: -0.25rem;
      transform-origin: center;
    }

    // Shadow for the crescent shape
    &::after {
      position: absolute;
      content: "";
      width: 1rem;
      height: 1rem;
      background-color: $color-background;
      border-radius: 100vmax;
      left: 0.4rem;
    }

    // Toggle differences
    &.dark {
      .colorFill {
        animation: toDarkFill 0.25s ease-out both;
        background-color: $color-text;
      }
      .beam {
        animation: toDarkBeams 0.25s ease-out both;
      }
      &::after {
        animation: toDarkCrescent 0.25s ease-out 0.25s both;
      }
    }
    &.light {
      .colorFill {
        animation: toLightFill 0.25s ease-out 0.3s both;
      }
      .beam {
        animation: toLightBeams 0.25s ease-out 0.5s both;
      }
      &::after {
        animation: toLightCrescent 0.5s ease-out 0.1s both;
      }
    }

    @media screen and (min-width: $responsive-breakpoint) {
      &.dark {
        transform: translateX(calc(0.75rem / 2));
      }

      &.light {
        transform: translateX(1.75rem - calc(0.75rem / 2));
      }
    }
  }
}

@media screen and (max-width: $responsive-breakpoint) {
  .outerSlider {
    width: 2rem;
    display: flex;
    align-items: center;
    justify-content: center;

    .innerSlider {
      position: relative;
      top: auto;
    }
  }
}

@keyframes toLightCrescent {
  0% {
    opacity: 1;
    transform: scale(0.9) translate(0, 0);
  }
  50% {
    transform: scale(1.2) translate(-5%, 5%);
  }
  75% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    transform: translate(75%, -40%) scale(0.75);
  }
}

@keyframes toDarkCrescent {
  0% {
    transform: scale(0.9) translate(75%, -60%);
  }
  75% {
    transform: translate(-10%, 5%);
  }
  100% {
    transform: scale(1) translate(0, 0);
  }
}

@keyframes toLightBeams {
  0% {
    opacity: 0.5;
    transform: scale(0);
  }
  75% {
    transform: scale(1.2);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes toDarkBeams {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  90% {
    opacity: 0.9;
  }
  100% {
    opacity: 0;
    transform: scale(0);
  }
}

@keyframes toLightFill {
  0% {
    transform: scale(1);
    background-color: $color-text;
  }
  50% {
    background-color: $color-text;
  }
  100% {
    background-color: orange;
    transform: scale(0.75);
  }
}

@keyframes toDarkFill {
  0% {
    transform: scale(0.75);
  }
  100% {
    transform: scale(1);
  }
}

